# full_spider_tutorial

./: pyproject.toml
nomnom/: scrapy.cfg
nomnom/nomnom/: address_list.txt  items.py  main.py  middlewares.py  pipelines.py  settings.py
nomnom/nomnom/spiders/: nominatim_spider.py
