[project]
name = "full-spider-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "DeAngelo Floyd",email = "deangelofloyd3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "full_spider_tutorial", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
